feat: finalize thesis
